--- a/pom.xml
+++ b/pom.xml
@@ -49,9 +49,10 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
 
+        <gaoice-common.version>1.0-SNAPSHOT</gaoice-common.version>
         <spring-boot.version>2.2.2.RELEASE</spring-boot.version>
         <easyexcel.version>2.0</easyexcel.version>
-        <lombok.version>1.18.16</lombok.version>
+        <lombok.version>1.18.24</lombok.version>
     </properties>
 
     <dependencyManagement>
@@ -68,6 +69,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.gaoice</groupId>
+            <artifactId>common</artifactId>
+            <version>${gaoice-common.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
         </dependency>
@@ -81,9 +87,15 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
             <optional>true</optional>
         </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
